# tinyshell

./: CMakeLists.txt  main.cpp
Feature/: directory.h  features.h  file.h  help.h  navigation.h  process.h  random_fact.h  ronaldo.h  solve_quadratic.h
Process/: CMakeLists.txt  countdown.cpp  producer_consumer.cpp  ronaldo.cpp
install/: history.txt
tinyshell-master/: main.cpp
tinyshell-master/Feature/: file.h  help.h  net_speed.h  process.h  system_utils.h
tinyshell-master/Process/: ronaldo.cpp
